# genomines-helper

./: README.md
backend/geomina/: geominadb  manage.py  pyproject.toml
backend/geomina/geomina/: asgi.py  settings.py  urls.py  wsgi.py
backend/geomina/geomina_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/geomina/geomina_api/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: CountryFilter.tsx  FoodFilter.tsx  RestaurantForm.tsx  RestaurantTable.tsx
frontend/src/interfaces/: Restaurant.tsx
frontend/src/services/: ModifyRestaurantService.ts
